# rust-webapp

./: .gitignore  Cargo.toml  Makefile  README.md  run.sh  tasks.md
docs/: camera-crud-implementation.md  project_doc_basic.md  project_doc_detailed.md
frontend/: Cargo.toml  index.html  style.css
frontend/src/: main.rs  services.rs
src/: main.rs  mock_data.rs
static/: index.html
