[package]
name = "rust-httpx-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs", "cors"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
once_cell = "1.18.0"
