[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "Headers",
] }
gloo-net = "0.2"
serde_json = "1.0" 