[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
gloo = "0.8"
gloo-net = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
indexmap = "1.9.3"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlInputElement", 
    "HtmlSelectElement",
    "Document",
    "Window",
    "Element"
]}
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yew-router = "0.17"
log = "0.4"
wasm-logger = "0.2" 